--- a/cli/package.json
+++ b/cli/package.json
@@ -4,15 +4,22 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "press3": "bun run index.ts",
-    "dev": "bun run index.ts help",
+    "press3": "bun run ./src/index.ts",
+    "dev": "bun run ./src/index.ts help",
     "lint": "biome check .",
+    "typecheck": "tsc --noEmit",
     "test": "bun test",
-    "build": "bun build index.ts --compile --outfile dist/press3"
+    "build": "bun build ./src/index.ts --compile --outfile dist/press3"
+  },
+  "dependencies": {
+    "@mysten/sui": "^1.45.2",
+    "@mysten/walrus": "^0.8.6",
+    "mime-types": "^2.1.35"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.3.8",
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "@types/mime-types": "^3.0.1"
   },
   "peerDependencies": {
     "typescript": "^5"
