--- a/.github/workflows/test-contracts.yml
+++ b/.github/workflows/test-contracts.yml
@@ -26,7 +26,7 @@ jobs:
           curl -fsSL https://raw.githubusercontent.com/Mystenlabs/suiup/main/install.sh | bash
           export PATH="$HOME/.local/bin:$PATH"
           export PATH="$HOME/.sui/bin:$PATH"
-          yes | suiup install sui
+          y | suiup install sui
           echo "$HOME/.local/bin" >> $GITHUB_PATH
           echo "$HOME/.sui/bin" >> $GITHUB_PATH
         shell: bash
