--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
     "qa-fix": "biome check --write ."
   },
   "dependencies": {
+    "@mysten/sui": "^1.45.2",
+    "@mysten/walrus": "^0.8.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-markdown": "^10.1.0"
