--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,9 +14,20 @@
   "dependencies": {
     "@mysten/sui": "^1.45.2",
     "@mysten/walrus": "^0.8.6",
+    "hast-util-to-text": "^4.0.2",
+    "mdast-util-to-string": "^4.0.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-markdown": "^10.1.0"
+    "react-markdown": "^10.1.0",
+    "rehype-parse": "^9.0.1",
+    "rehype-slug": "^6.0.0",
+    "rehype-stringify": "^10.0.1",
+    "remark-parse": "^11.0.0",
+    "remark-rehype": "^11.1.2",
+    "remark-slug": "^7.0.1",
+    "unified": "^11.0.5",
+    "unist-util-visit": "^5.0.0",
+    "vfile": "^6.0.3"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.3.8",
