--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,12 +12,14 @@
     "qa-fix": "biome check --write ."
   },
   "dependencies": {
+    "@fluffylabs/shared-ui": "^0.4.6",
     "@mysten/sui": "^1.45.2",
     "@mysten/walrus": "^0.8.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-markdown": "^10.1.0",
-    "react-router-dom": "^7.10.1"
+    "react-router-dom": "^7.10.1",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.3.8",
