--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "qa-fix": "biome check --write ."
   },
   "dependencies": {
+    "@fluffylabs/shared-ui": "^0.4.6",
     "@mysten/sui": "^1.45.2",
     "@mysten/walrus": "^0.8.6",
     "hast-util-to-text": "^4.0.2",
@@ -20,6 +21,7 @@
     "react-dom": "^19.2.0",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.10.1",
+    "tailwind-merge": "^3.4.0",
     "rehype-parse": "^9.0.1",
     "rehype-slug": "^6.0.0",
     "rehype-stringify": "^10.0.1",
