--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,11 +16,13 @@
     "@mysten/sui": "^1.45.2",
     "@mysten/walrus": "^0.8.6",
     "hast-util-to-text": "^4.0.2",
+    "lucide-react": "^0.561.0",
     "mdast-util-to-string": "^4.0.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.10.1",
+    "react-tooltip": "^5.30.0",
     "rehype-parse": "^9.0.1",
     "rehype-slug": "^6.0.0",
     "rehype-stringify": "^10.0.1",
