--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,20 @@
     "@mysten/sui": "^1.45.2",
     "@mysten/walrus": "^0.8.6",
     "@tanstack/react-query": "^5.90.12",
+    "@tiptap/extension-bubble-menu": "^3.13.0",
+    "@tiptap/extension-code-block-lowlight": "^3.13.0",
+    "@tiptap/extension-floating-menu": "^3.13.0",
+    "@tiptap/extension-image": "^3.13.0",
+    "@tiptap/extension-link": "^3.13.0",
+    "@tiptap/extension-placeholder": "^3.13.0",
+    "@tiptap/extension-table": "^3.13.0",
+    "@tiptap/extension-table-cell": "^3.13.0",
+    "@tiptap/extension-table-header": "^3.13.0",
+    "@tiptap/extension-table-row": "^3.13.0",
+    "@tiptap/react": "^3.13.0",
+    "@tiptap/starter-kit": "^3.13.0",
     "hast-util-to-text": "^4.0.2",
+    "lowlight": "^3.3.0",
     "lucide-react": "^0.561.0",
     "mdast-util-to-string": "^4.0.0",
     "react": "^19.2.0",
