add rich editor (#86)
* add rich editor

* fix markdown

* fix build

* fix build vol 2

* qa-fix

* add possibility to disable rich editor

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,20 @@
     "@mysten/sui": "^1.45.2",
     "@mysten/walrus": "^0.8.6",
     "@tanstack/react-query": "^5.90.12",
+    "@tiptap/extension-bubble-menu": "^3.13.0",
+    "@tiptap/extension-code-block-lowlight": "^3.13.0",
+    "@tiptap/extension-floating-menu": "^3.13.0",
+    "@tiptap/extension-image": "^3.13.0",
+    "@tiptap/extension-link": "^3.13.0",
+    "@tiptap/extension-placeholder": "^3.13.0",
+    "@tiptap/extension-table": "^3.13.0",
+    "@tiptap/extension-table-cell": "^3.13.0",
+    "@tiptap/extension-table-header": "^3.13.0",
+    "@tiptap/extension-table-row": "^3.13.0",
+    "@tiptap/react": "^3.13.0",
+    "@tiptap/starter-kit": "^3.13.0",
     "hast-util-to-text": "^4.0.2",
+    "lowlight": "^3.3.0",
     "lucide-react": "^0.561.0",
     "mdast-util-to-string": "^4.0.0",
     "react": "^19.2.0",
@@ -32,6 +45,7 @@
     "remark-rehype": "^11.1.2",
     "remark-slug": "^7.0.1",
     "tailwind-merge": "^3.4.0",
+    "tiptap-markdown": "^0.9.0",
     "unified": "^11.0.5",
     "unist-util-visit": "^5.0.0",
     "vfile": "^6.0.3"
